Refactor food module architecture